Fix networth reports

This should be the last bit to make the networth reports to work as they
used to.

BUG: 383165
FIXED-IN: 5.0